[gd_scene load_steps=11 format=3 uid="uid://bi8pk6grgod46"]

[ext_resource type="Script" path="res://props/interactable/sleeping_chair.gd" id="1_0ilrx"]
[ext_resource type="PackedScene" uid="uid://dl3hticbwtgq4" path="res://_starter_content/interactable/interactable.tscn" id="1_ubfkd"]
[ext_resource type="Texture2D" uid="uid://dqlbfv1ewumyg" path="res://assets/props/sleepingpoint.png" id="3_6pdhd"]
[ext_resource type="Texture2D" uid="uid://b0p34ifc0ljr5" path="res://assets/player/amenine/sleep.png" id="3_c8wbr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okp7v"]
size = Vector2(58, 66)

[sub_resource type="Animation" id="Animation_ltvr1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4mc3y"]
resource_name = "sleep"
length = 0.62
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_y5k12"]
resource_name = "sleeping"
length = 0.28
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="Animation" id="Animation_5dr7v"]
resource_name = "wakeup"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qerka"]
_data = {
"RESET": SubResource("Animation_ltvr1"),
"sleep": SubResource("Animation_4mc3y"),
"sleeping": SubResource("Animation_y5k12"),
"wakeup": SubResource("Animation_5dr7v")
}

[node name="SleepingChair" type="Node2D"]
use_parent_material = true
position = Vector2(104, 104)
script = ExtResource("1_0ilrx")

[node name="Interactable" parent="." instance=ExtResource("1_ubfkd")]
interact_message = "Dormir"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_okp7v")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(2, 0)
scale = Vector2(-1, 1)
texture = ExtResource("3_6pdhd")

[node name="PlayerSprite" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
position = Vector2(-19, -14)
texture = ExtResource("3_c8wbr")
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qerka")
}

[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
